# tetries_3D

./: CMakeLists.txt  README.md
include/: Board.h  Cube.h  Piece.h  TextRenderer.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Board.cpp  Cube.cpp  Game.cpp  GameField.cpp  Piece.cpp  Shader.cpp  TextRenderer.cpp  glad.c  main.cpp
